# stalagmite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
assets/: dev-reload.js  rules.yaml
assets/init/blocks/: h4.liquid
assets/init/layouts/: primary.liquid
benches/: bench.rs
example/assets/: dev-reload.js  extra-styles.css
example/blocks/: a.liquid  fancy-paragraph.liquid  h5.liquid  h6.liquid  i.liquid
example/layouts/: blogpost.liquid  post-listings.liquid  primary.liquid
example/pages/: index.html
example/pages/blog/: rules.yaml  welcome.md  welcome_to_my_blog.md
example/public/: styles.css
example/public/blog/welcome/: index.html
migrations/: V1__initial.sql
src/: assets.rs  cache.rs  cli.rs  common.rs  config.rs  core.rs  devserver.rs  diskio.rs  generator.rs  lib.rs  main.rs  markdown.rs  pages.rs  project.rs  render.rs  renderer.rs  server.rs  styles.rs  utils.rs
src/liquid/filters/: block.rs
src/liquid/tags/: render_block.rs  static_asset.rs  tailwind.rs
src/parsers/: markdown.rs
tests/: integration.rs
tests/snapshots/: integration__generate_example_site-2.snap  integration__generate_example_site-3.snap  integration__generate_example_site.snap
