[package]
name = "stalagmite"
version = "0.0.1"
edition = "2021"
authors = ["mknaw <m@mknaw.biz>"]

[lib]
name = "stalagmite"
path = "src/lib.rs"

[[bin]]
name = "stalagmite"
path = "src/cli.rs"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
ignore = "0.4.20"
include_dir = "0.7.3"
lazy_static = "1.4.0"
lightningcss = "1.0.0-alpha.51"
liquid = { version = "0.26.4", features = ["liquid-lib"] }
liquid-core = "0.26.4"
memmap2 = "0.9.0"
nom = "7.1.3"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
railwind = "0.1.5"
rayon = "1.8.0"
rusqlite = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
tempdir = "0.3.7"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
tempdir = "0.3.7"
