[package]
name = "stalagmite"
version = "0.0.1"
edition = "2021"
authors = ["mknaw <m@mknaw.biz>"]

[lib]
name = "stalagmite"
path = "src/lib.rs"

[[bin]]
name = "stalagmite"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["macros"] }
bytes = "1.5.0"
camino = "1.1.6"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.30"
http = "1.0.0"
hyper = "1.1.0"
ignore = "0.4.20"
include_dir = "0.7.3"
lazy_static = "1.4.0"
lightningcss = "1.0.0-alpha.51"
liquid = { version = "0.26.4", features = ["liquid-lib"] }
liquid-core = "0.26.4"
memmap2 = "0.9.0"
nom = "7.1.3"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
railwind = "0.1.5"
rayon = "1.8.0"
refinery = { version = "0.8.12", features = ["rusqlite"] }
regex = "1.10.3"
rusqlite = "0.30.0"
seahash = "4.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
tempdir = "0.3.7"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
tempdir = "0.3.7"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
